Se creo la logica para visualizar las ordenes en la ventana principal del admin